[gd_scene load_steps=2 format=3 uid="uid://b5nurm76pnhpw"]

[ext_resource type="Script" path="res://Scripts/ButtonsBehaviours/SongButtonBehaviour.gd" id="1_f05a2"]

[node name="Button_Song" type="Button"]
clip_contents = true
custom_minimum_size = Vector2i(300, 100)
offset_right = 300.0
offset_bottom = 100.0
alignment = 0
script = ExtResource("1_f05a2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
anchors_preset = -1
offset_bottom = 101.0
grow_vertical = 2
size_flags_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
offset_left = 132.0
offset_right = 300.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
offset_right = 168.0
offset_bottom = 31.0
size_flags_vertical = 3
alignment = 1

[node name="AlbumLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
offset_right = 81.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.247059, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 12
text = "Album Name"
vertical_alignment = 1
uppercase = true

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
offset_left = 85.0
offset_right = 168.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
placeholder_text = "Album Name"
clear_button_enabled = true

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
offset_top = 35.0
offset_right = 168.0
offset_bottom = 66.0
size_flags_vertical = 3

[node name="ArtistLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
offset_right = 81.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.247059, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 12
text = "artist name"
vertical_alignment = 1
clip_text = true
uppercase = true

[node name="LineEdit3" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
offset_left = 85.0
offset_right = 168.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
placeholder_text = "Artist Name"
clear_button_enabled = true

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
offset_top = 70.0
offset_right = 168.0
offset_bottom = 101.0
size_flags_vertical = 3

[node name="GroupLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
offset_right = 81.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.247059, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 12
text = "group name"
vertical_alignment = 1
clip_text = true
uppercase = true

[node name="LineEdit4" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
offset_left = 85.0
offset_right = 168.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
placeholder_text = "Group Name"
clear_button_enabled = true

[connection signal="button_down" from="." to="." method="_on_custom_base_song_button_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_custom_base_song_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_custom_base_song_button_mouse_exited"]
[connection signal="text_submitted" from="HBoxContainer/VBoxContainer/HBoxContainer/LineEdit2" to="." method="_on_line_edit_2_text_submitted"]
[connection signal="text_submitted" from="HBoxContainer/VBoxContainer/HBoxContainer2/LineEdit3" to="." method="_on_line_edit_3_text_submitted"]
[connection signal="text_submitted" from="HBoxContainer/VBoxContainer/HBoxContainer3/LineEdit4" to="." method="_on_line_edit_4_text_submitted"]
